feat: 新增头像存储
